--- a/getProperty.html
+++ b/getProperty.html
@@ -13,7 +13,8 @@
             name:"vignesh",
             address:"ramanathapuram",
             pincode:623529,
-            key: 'tesst'
+            key: 'tesst',
+            git:'test'
             }
         function getProperty(obj,key)
         {
