--- a/getProperty.html
+++ b/getProperty.html
@@ -8,17 +8,15 @@
 </head>
 <body>
     <script>
-
-            var obj={
+    var obj={
             name:"vignesh",
             address:"ramanathapuram",
             pincode:623529,
-            key: 'tesst',
-            git:'test'
+            key: 'tesst'
             }
         function getProperty(obj,key)
         {
-           console.log(obj[key]);
+           console.log(obj.key);
         }
         getProperty(obj,'address');
     </script>
